[package]
name = "dumper-7"
version = "0.1.0"
edition = "2021"
authors = ["Dumper-7 Contributors"]
description = "SDK Generator for Unreal Engine games (UE4/UE5)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"
miette = { version = "7.0", features = ["fancy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (for standalone executable)
clap = { version = "4.5", features = ["derive"] }

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
memchr = "2.7"
bytemuck = { version = "1.14", features = ["derive"] }

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["process", "ptrace", "signal"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
insta = "1.34"
tempfile = "3.8"

[[bench]]
name = "offset_finding"
harness = false

[[bench]]
name = "code_generation"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
